# piddiplatsch2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: GITHUB_TRANSFER_CHECKLIST.md  README_kafka.md  README_pids.md  errors_dc_04.txt
docs/schema/: pid_schema_cmip7-20250422.txt
etc/: esgf-demo.toml  esgf-example.toml  observe.toml
notebooks/: README.md  demo-handle-service.ipynb  environment.yml  play-with-piddiplatsch.ipynb  stac-example.ipynb
piddiplatsch/: consumer.py
scripts/: README.md  ensure_kafka_topic.py  ensure_kafka_topic.sh  kafka.sh  wait_for_kafka_health.sh
src/piddiplatsch/: cli.py  client.py  config.py  consumer.py  dump.py  exceptions.py  handle_client.py  helpers.py  mock_handle_server.py  plugin.py  plugin_loader.py  processor_registry.py  recovery.py  result.py  stats.py
src/piddiplatsch/config/: __init__.py  config.py  default.toml  default_config.toml  schema.py
src/piddiplatsch/core/: __init__.py  models.py  plugin.py  processing.py  records.py  registry.py
src/piddiplatsch/handle/: models.py  record.py
src/piddiplatsch/handles/: __init__.py  api.py  base.py  jsonl_backend.py  pyhandle_backend.py
src/piddiplatsch/lookup/: __init__.py  api.py  base.py  es.py  stac.py
src/piddiplatsch/models/: __init__.py  base.py  cmip6_asset_model.py  cmip6_dataset_model.py  cmip6_file_model.py  cmip6_item_model.py  cmip6_model.py
src/piddiplatsch/monitoring/: __init__.py  base.py  metrics.py  progress.py  rate_tracker.py  stats.py
src/piddiplatsch/persist/: base.py  dump.py  helpers.py  recovery.py  retry.py  skipped.py
src/piddiplatsch/plugins/: __init__.py  cmip6_processor.py  schema.py
src/piddiplatsch/plugins/cmip6/: __init__.py  base.py  model.py  plugin.py  processor.py  record.py
src/piddiplatsch/processing/: __init__.py  base.py  cmip6_processor.py  registry.py  result.py
src/piddiplatsch/processors/: __init__.py  cmip6.py  cmip6_stac.py
src/piddiplatsch/records/: __init__.py  base.py  cmip6_asset_record.py  cmip6_dataset_record.py  cmip6_file_record.py  cmip6_item_record.py  cmip6_record.py  utils.py
src/piddiplatsch/schema/: __init__.py
src/piddiplatsch/schema/files/: cmip6.schema.json
src/piddiplatsch/testing/: kafka_client.py  mock_handle_server.py
src/piddiplatsch/utils/: models.py  pid.py  rate_tracker.py  stac.py
tests/: config.toml  conftest.py  test_cli.py  test_cli_unit.py  test_client.py  test_cmip6_dataset_model.py  test_cmip6_dataset_record.py  test_cmip6_file_model.py  test_cmip6_file_record.py  test_cmip6_model.py  test_config_validation.py  test_consumer.py  test_dry_run_backend.py  test_dry_run_integration.py  test_handle_client.py  test_mock_handle_server.py  test_monitoring_stats.py  test_persist_dump.py  test_persist_skipped.py  test_piddiplatsch.py  test_processor_registry.py  test_retry_runner.py  test_retry_skipped.py  test_schema.py  test_skip_flow.py  test_smoke.py  test_transient_stop.py  test_utils_models.py  test_utils_stac.py
tests/integration/: conftest.py  test_cli.py  test_dry_run_backend.py  test_dry_run_integration.py  test_retry.py  test_stop_first_error.py
tests/plugins/: test_plugin_discovery.py
tests/plugins/cmip6/: test_cmip6_dataset_model.py  test_cmip6_dataset_record.py  test_cmip6_file_model.py  test_cmip6_file_record.py
tests/smoke/: conftest.py  helpers.py  test_smoke.py
tests/testdata/: example.json  sample_failures.jsonl
tests/testdata/CMIP6/: CMIP6.ScenarioMIP.MPI-M.MPI-ESM1-2-LR.ssp126.r1i1p1f1.day.huss.gn.v20190710.json  CMIP6.ScenarioMIP.MPI-M.MPI-ESM1-2-LR.ssp126.r1i1p1f1.day.tasmin.gn.v20190710.json  CMIP6.ScenarioMIP.MPI-M.MPI-ESM1-2-LR.ssp126.r1i1p1f1.day.vas.gn.v20190710.json
tests/testdata/CMIP6_invalid/: CMIP6.ScenarioMIP.MPI-M.MPI-ESM1-2-LR.ssp126.r1i1p1f1.day.tasmin.gn.v20190710.json
tests/testdata/data_challenge_02/CMIP6/: CMIP6.ScenarioMIP.MPI-M.MPI-ESM1-2-LR.ssp126.r1i1p1f1.Amon.tasmin.gn.v20190710.json
tests/testdata/data_challenge_04/CMIP6/: CMIP6.HighResMIP.MRI.MRI-AGCM3-2-H.highresSST-present.r1i1p1f1.6hrPlevPt.psl.gn.v20190820.json  CMIP6.ScenarioMIP.IPSL.IPSL-CM6A-LR.ssp245.r1i1p1f1.Amon.pr.gr.v20190119.json
tests/testdata/data_challenge_04/CMIP6_invalid/: CMIP6.ScenarioMIP.DKRZ.MPI-ESM1-2-HR.ssp126.r1i1p1f1.Eyr.baresoilFrac.gn.v20190710.json  CMIP6.ScenarioMIP.IPSL.IPSL-CM6A-LR.ssp245.r1i1p1f1.Amon.pr.gr.v20190119_missing_file_size.json
